--- a/vocabulary/src/main/resources/vocabularies/api_contract.yaml
+++ b/vocabulary/src/main/resources/vocabularies/api_contract.yaml
@@ -291,6 +291,10 @@ propertyTerms:
     displayName: template
     description: URL template for a templated link
     range: string
+  templateVariable:
+    displayName: templateVariable
+    description: Variable defined inside an URL template
+    range: string
   uriParameter:
     displayName: uri parameter
     range: Parameter
