--- a/vocabulary/src/main/resources/vocabularies/external/shacl.yaml
+++ b/vocabulary/src/main/resources/vocabularies/external/shacl.yaml
@@ -21,6 +21,7 @@ classTerms:
 propertyTerms:
   additionalPropertiesSchema:
     displayName: additional properties schema
+    description: Additional properties schema
     range: Shape
   and:
     displayName: and
@@ -115,8 +116,8 @@ propertyTerms:
     description: Properties associated to this node
     range: PropertyShape
   propertyNames:
-    displayName: property
-    description: property names schema
+    displayName: property names
+    description: Property names schema
     range: Shape
   targetClass:
     displayName: target class
