--- a/vocabulary/src/main/resources/vocabularies/data_shapes.yaml
+++ b/vocabulary/src/main/resources/vocabularies/data_shapes.yaml
@@ -70,7 +70,7 @@ classTerms:
     description: Information about how to encode into XML a particular data shape
 propertyTerms:
   additionalItemsSchema:
-    displayName: additional items
+    displayName: additional items schema
     description: Controls whether it’s valid to have additional items in the array beyond what is defined
     range: shacl.Shape
   anyOf:
