--- a/vocabulary/src/main/resources/vocabularies/security.yaml
+++ b/vocabulary/src/main/resources/vocabularies/security.yaml
@@ -9,6 +9,10 @@ classTerms:
     displayName: API Key Settings
     description: Settings for an API Key security scheme
     extends: Settings
+  HttpApiKeySettings:
+    displayName: Http API Key Settings
+    description: Settings for an Http API Key security scheme
+    extends: Settings
   HttpSettings:
     displayName: HTTP Settings
     description: Settings for an HTTP security scheme
