--- a/vocabulary/src/main/resources/vocabularies/core.yaml
+++ b/vocabulary/src/main/resources/vocabularies/core.yaml
@@ -33,7 +33,7 @@ propertyTerms:
     range: string
   displayName:
     displayName: display name
-    description: Human readable name for the term
+    description: Human readable name for an entity
     range: string
   documentation:
     displayName: documentation
@@ -65,7 +65,7 @@ propertyTerms:
     range: string
   name:
     displayName: name
-    description: Name for an entity
+    description: name for an entity
     range: string
   provider:
     displayName: provider
