Fix model export with new description for displayName.

--- a/vocabulary/src/main/resources/vocabularies/api_contract.yaml
+++ b/vocabulary/src/main/resources/vocabularies/api_contract.yaml
@@ -250,6 +250,7 @@ propertyTerms:
     range: string
   required:
     displayName: required
+    description: Marks the parameter as required
     range: boolean
   response:
     displayName: response
