Modular recursion failing test

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -1837,7 +1837,7 @@ nodeMappings:
       name:
         propertyTerm: shacl.name
         range: string
-      name1:
+      displayName:
         propertyTerm: core.name
         range: string
       description:
