--- a/export/build.gradle
+++ b/export/build.gradle
@@ -1,15 +1,15 @@
 plugins {
-    id 'scala'
+    id "scala"
 }
 
 dependencies {
     // Use Scala 2.13 in our library project
-    implementation 'org.scala-lang:scala-library:2.13.2'
+    implementation "org.scala-lang:scala-library:${scalaVersion}"
 
     // Use Scalatest for testing our library
-    testImplementation 'org.scalatest:scalatest_2.13:3.1.2'
-    testImplementation 'org.scalatestplus:junit-4-12_2.13:3.1.2.0'
+    testImplementation "org.scalatest:scalatest_2.12:${scalaTestVersion}"
+    testImplementation "org.scalatestplus:junit-4-12_2.12:${scalaTestPlusJunitVersion}"
 
     // Need scala-xml at test runtime
-    testRuntimeOnly 'org.scala-lang.modules:scala-xml_2.13:1.2.0'
+    testRuntimeOnly "org.scala-lang.modules:scala-xml_2.12:${scalaXmlVersion}"
 }
