--- a/exporters/build.gradle
+++ b/exporters/build.gradle
@@ -3,8 +3,12 @@ plugins {
 }
 
 dependencies {
+
+    implementation project(':transform')
     // Use Scala 2.13 in our library project
     implementation "org.scala-lang:scala-library:${scalaVersion}"
+
+    implementation "com.github.amlorg:amf-client_2.12:${amfVersion}"
 
     // Use Scalatest for testing our library
     testImplementation "org.scalatest:scalatest_2.12:${scalaTestVersion}"
