--- a/.gitignore
+++ b/.gitignore
@@ -66,8 +66,8 @@ fabric.properties
 
 ### Gradle template
 .gradle
-/build/
-*/build/
+/target/
+*/target/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -81,3 +81,15 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+# Simple Build Tool
+# http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
+
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.cache
+.lib/
