--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -157,6 +157,56 @@ nodeMappings:
       - Extension
       - Overlay
 
+  ChannelBindingUnion:
+    typeDiscriminatorName: bindingType
+    typeDiscriminator:
+      WebSockets: WebSocketsChannelBinding
+      Amqp091: Amqp091ChannelBinding
+      Empty: EmptyBinding
+    union:
+      - WebSocketsChannelBinding
+      - Amqp091ChannelBinding
+      - EmptyBinding
+
+  ServerBindingUnion:
+    typeDiscriminatorName: bindingType
+    typeDiscriminator:
+      Mqtt: MqttServerBinding
+      Empty: EmptyBinding
+    union:
+      - MqttServerBinding
+      - EmptyBinding
+
+  MessageBindingUnion:
+    typeDiscriminatorName: bindingType
+    typeDiscriminator:
+      Amqp091: Amqp091MessageBinding
+      Mqtt: MqttMessageBinding
+      Http: HttpMessageBinding
+      Kafka: KafkaMessageBinding
+      Empty: EmptyBinding
+    union:
+      - Amqp091MessageBinding
+      - MqttMessageBinding
+      - HttpMessageBinding
+      - KafkaMessageBinding
+      - EmptyBinding
+
+  OperationBindingUnion:
+    typeDiscriminatorName: bindingType
+    typeDiscriminator:
+      Amqp091: Amqp091OperationBinding
+      Mqtt: MqttOperationBinding
+      Http: HttpOperationBinding
+      Kafka: KafkaOperationBinding
+      Empty: EmptyBinding
+    union:
+      - Amqp091OperationBinding
+      - MqttOperationBinding
+      - HttpOperationBinding
+      - KafkaOperationBinding
+      - EmptyBinding
+
   APIKeySettings:
     classTerm: security.ApiKeySettings
     extends: Settings
@@ -442,7 +492,7 @@ nodeMappings:
         range: string
       binding:
         propertyTerm: apiBinding.binding
-        range: ChannelBinding
+        range: ChannelBindingUnion
         allowMultiple: true
       designLink:
         propertyTerm: doc.design-link-target
@@ -1011,7 +1061,7 @@ nodeMappings:
         range: string
       binding:
         propertyTerm: apiBinding.binding
-        range: MessageBinding
+        range: MessageBindingUnion
         allowMultiple: true
       designLink:
         propertyTerm: doc.design-link-target
@@ -1332,7 +1382,7 @@ nodeMappings:
         range: string
       binding:
         propertyTerm: apiBinding.binding
-        range: OperationBinding
+        range: OperationBindingUnion
         allowMultiple: true
       designLink:
         propertyTerm: doc.design-link-target
@@ -1799,7 +1849,7 @@ nodeMappings:
         range: string
       binding:
         propertyTerm: apiBinding.binding
-        range: ServerBinding
+        range: ServerBindingUnion
         allowMultiple: true
       designLink:
         propertyTerm: doc.design-link-target
