APIMF-2412: updated dialects and vocabularies due to AMF meta-model change

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -1089,6 +1089,9 @@ nodeMappings:
       retain:
         propertyTerm: apiBinding.retain
         range: boolean
+      message:
+        propertyTerm: apiBinding.message
+        range: string
       designAnnotations:
         propertyTerm: doc.designAnnotation
         range: DomainExtension
